[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelUi/LevelFinished.gd" type="Script" id=1]

[node name="LevelFinished" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 289.0
margin_top = 28.0
margin_right = 811.0
margin_bottom = 550.0
color = Color( 0.384314, 0.384314, 0.384314, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 498.0
margin_top = 112.0
margin_right = 621.0
margin_bottom = 126.0
text = "Pidgeon Work Shift Finished"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 445.0
margin_top = 139.0
margin_right = 568.0
margin_bottom = 153.0
text = "Total"
align = 2

[node name="Label3" type="Label" parent="."]
margin_left = 445.0
margin_top = 159.0
margin_right = 568.0
margin_bottom = 173.0
text = "Delivered"
align = 2

[node name="vTotal" type="Label" parent="."]
margin_left = 573.0
margin_top = 139.0
margin_right = 696.0
margin_bottom = 153.0
text = "---"

[node name="vDelivered" type="Label" parent="."]
margin_left = 573.0
margin_top = 159.0
margin_right = 696.0
margin_bottom = 173.0
text = "---"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextLevelButton" type="Button" parent="."]
margin_left = 631.0
margin_top = 266.0
margin_right = 711.0
margin_bottom = 286.0
text = "Next Level"

[node name="playAgainButton" type="Button" parent="."]
margin_left = 504.0
margin_top = 266.0
margin_right = 619.0
margin_bottom = 286.0
text = "Play Level Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleScreenButton" type="Button" parent="."]
margin_left = 404.0
margin_top = 266.0
margin_right = 491.0
margin_bottom = 286.0
text = "Title Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThanksLabel" type="Label" parent="."]
margin_left = 497.0
margin_top = 207.0
margin_right = 622.0
margin_bottom = 221.0
text = "!!THE END!!
Thanks For Playing!!!!!!"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
